style.css
:root{
  --rock: url("https://raw.githubusercontent.com/thpham1997/rock_paper_scissor_game/main/icon/rock.png");
  --paper: url("https://raw.githubusercontent.com/thpham1997/rock_paper_scissor_game/main/icon/paper.png");
  --scissor: url("https://raw.githubusercontent.com/thpham1997/rock_paper_scissor_game/main/icon/scissor.png");
}
*{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  /* border: dashed white 0.01pt; */
}
body{
  background: #414FBE;
  min-width: 800px;
}
header{
  display: block;
  font-size: 3rem;
  font-weight: bolder;
  height: 20vh;
  width: auto;
  text-align: center;
  padding: 30px 0;
}

/* Playground */
#playground{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-auto-rows: 300px;
  gap: 10px;
  padding: 0 10px;
}
#playground #user{
  display: grid;
  grid-template-rows: 2fr 1fr;
  gap: 10px;
}
#playground #user #user_choice{
  margin-top: 10px;
  display: block;
  background: var(--rock) no-repeat center ;
  background-size: contain;
  width: 200px;
  height: 180px;
  justify-self: center;
  border: solid 1px #ccc;
  border-radius: 40px;
  background-color: #BEB041;
}
#possible_choices{
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 15%;
  padding: 0 10%;
}
#possible_choices button{
  display: block;
  place-self: center;
  width: 80%;
  height: 80%;
  min-width: 80px;
  border-radius: 20px;
  border-color: #ccc;
}
#possible_choices button:hover{
  cursor: pointer;
}
#possible_choices #rock{
  background: var(--rock) no-repeat center;
  background-color: #41BE71;
}
#possible_choices #paper{
  background: var(--paper) no-repeat center;
  background-color: #41BE71;
}
#possible_choices #scissor{
  background: var(--scissor) no-repeat center;
  background-color: #41BE71;
}
#comp{
  margin-top: 10px;
  /* display: block; */
  background: var(--scissor) no-repeat center ;
  background-size: contain;
  height: 180px;
  width: 200px;
  justify-self: center;
  border: solid 1px #ccc;
  border-radius: 40px;
  background-color: #BEB041;
}

/* result */
#result-table{
  position: relative;
  left: 50%;
  transform: translateX(-50%);
  height: 35vh;
  width: 500px;
  margin-top: 10px;
  display: grid;
  grid-template-rows: 1fr 3fr;
  border: solid 1px;
  border-radius: 20px;
}
#table-title{
  width: 500px;
  padding: 10px 0;
  justify-self: center;
  text-align: center;
  border-bottom: solid 1px;
}
#table{
  width: 500px;
  justify-self: center;
  display: grid;
  grid-template: 
    "user-column comp-column"
    "user-column comp-column"
    "result-word result-word";
  gap: 5px;
}

#user-column{
  grid-area: user-column;
  border-bottom: solid 1px;
  border-right: solid 1px;
  display: flex;
  flex-direction: column;
}
#user-name{
  height: 40%;
  border-bottom: solid 1px;
}
#comp-column{
  grid-area: comp-column;
  border-bottom: solid 1px;
  border-left: solid 1px;
}
#comp-name{
  height: 40%;
  border-bottom: solid 1px;
}
#result-word{
  grid-area: result-word;
  text-align: center;
  place-content: center;
}

